# OctoHome

./: .env.example  .gitignore  README.md  auth.ts  eslint.config.mjs  next-auth.d.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
.github/: RELEASE_TEMPLATE.md
app/: global-error.tsx  globals.css  globals.test.ts  layout-providers.test.ts  layout.tsx  not-found.tsx  page.tsx
app/ai/: page.tsx
components/: action-group.tsx  app-shell.tsx  appearance-provider.tsx  appearance-settings-card.tsx  board-column-shell.tsx  dashboard.tsx  layout-primitives.test.tsx  metric-card.tsx  mobile-nav-sheet.tsx  onboarding-wizard.tsx  page-header.tsx  repo-required-state.tsx  root-providers.tsx  sidebar-nav.test.ts  sidebar-nav.ts  sidebar.tsx  surface-card.tsx  task-assignment-control.tsx
lib/: api-errors.ts  appearance.test.ts  appearance.ts  auth-token.ts  ci-release-workflow.test.ts  env.test.ts  env.ts  github-policy.test.ts  github-policy.ts  github.ts  magic-utils.ts  member-stats.test.ts  member-stats.ts  openid-client-compat.test.ts  rate-limit-error.ts  rate-limit.test.ts  rate-limit.ts  request-security.ts  security-headers.test.ts  security-headers.ts  server-auth.test.ts  server-auth.ts  server-rate-limit.test.ts  server-rate-limit.ts  types.ts  use-resolved-home-repo.test.ts  use-resolved-home-repo.ts
patches/: openid-client+5.7.1.patch
public/: manifest.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
store/: use-appearance-store.ts  use-onboarding-store.ts
(+29 files in other folders)
