[package]
name = "octohome"
version = "1.0.0"
description = "OctoHome – GitHub as a household operating system"
authors = ["OctoHome Contributors"]
license = "ISC"
repository = "https://github.com/Malinowski-Consulting-LLC/OctoHome"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "octohome_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.25"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
url = "2.5.4"
